# BlackRock-Hackthon

./: Dockerfile  README.md  compose.yaml  prd.txt  pyproject.toml
app/: main.py
app/api/: orchestrator.py  performance.py  returns.py  transactions.py
app/core/: financial.py  temporal.py
app/models/: schemas.py
tests/: test_financials.py  test_load.py
