[project]
name = "blackrock"
version = "0.1.0"
description = "BlackRock Micro-Savings Challenge"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.129.0",
    "pydantic-settings>=2.13.1",
    "pydantic>=2.12.5",
    "ruff>=0.15.2",
    "ty>=0.0.18",
    "uvicorn>=0.41.0",
    "psutil>=7.2.2",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
pythonpath = "."

